another settings update, important for local hosting

--- a/songeek-project/templates/songeek/index.html
+++ b/songeek-project/templates/songeek/index.html
@@ -61,7 +61,7 @@
 
         <!-- image placeholder -->
         <div class="visualizer">
-            <img src="{% static 'images/visualizer.png' %}" alt="Music Visualizer">
+            <img src="{% static 'website_images/visualizer.png' %}" alt="Music Visualizer">
         </div>
 
         <!-- playlist and album sections -->
