fixed add pages

--- a/songeek-project/templates/songeek/new_playlist.html
+++ b/songeek-project/templates/songeek/new_playlist.html
@@ -24,7 +24,7 @@
                 {% if field.field.widget.input_type == "file" %}
                         <div class="file-upload-wrapper">
                             <input type="file" id="{{ field.id_for_label }}" name="{{ field.html_name }}">
-                            <label for="{{ field.id_for_label }}" class="file-upload-label">Upload Album Cover</label>
+                            <label for="{{ field.id_for_label }}" class="file-upload-label">Upload Playlist Cover</label>
                         </div>
                     {% else %}
                         {{ field }}
