--- a/songeek-project/templates/songeek/add_song_to_playlist.html
+++ b/songeek-project/templates/songeek/add_song_to_playlist.html
@@ -6,19 +6,24 @@
 {% endblock %}
 
 {% block body_block %}
-    <h1>Add a song to the {{ playlist.name }}</h1>
-    <div>
-        <form id="song_to_playlist_form" method="post" action="{% url 'songeek:add_song_to_playlist' playlist.slug %}" enctype="multipart/form-data">
-            {% csrf_token %}
-            {% for hidden in form.hidden_fields %}
-                {{ hidden }}
-            {% endfor %}
-            {% for field in form.visible_fields %}
-                {{ field.errors }}
-                {{ field.help_text }}
-                {{ field }}
-            {% endfor %}
-            <input type="submit" name="submit" value="Add song to Playlist" />
-        </form>
+<div class="base-page">
+    <div class="base-box">
+        <div class="title-container">
+            <h1>Add a song to the {{ playlist.name }}</h1>
+        <div>
+            <form id="song_to_playlist_form" method="post" action="{% url 'songeek:add_song_to_playlist' playlist.slug %}" enctype="multipart/form-data">
+                {% csrf_token %}
+                {% for hidden in form.hidden_fields %}
+                    {{ hidden }}
+                {% endfor %}
+                {% for field in form.visible_fields %}
+                    {{ field.errors }}
+                    {{ field.help_text }}
+                    {{ field }}
+                {% endfor %}
+                <button type="submit">Add Song to Playlist</button>
+            </form>
+        </div>
     </div>
+</div>
 {% endblock %}
