--- a/songeek-project/templates/songeek/add_song_to_album.html
+++ b/songeek-project/templates/songeek/add_song_to_album.html
@@ -5,6 +5,8 @@
     Add a Song
 {% endblock %}
 
+{% block body_class %}navbar nav-search base-page base-box index-page{% endblock %}
+
 {% block body_block %}
 <div class="base-page">
     <div class="base-box">
