--- a/songeek-project/static/css/styles.css
+++ b/songeek-project/static/css/styles.css
@@ -5,7 +5,7 @@ html, body {
     display: block;
     padding: 0;
     flex-direction: column;
-    background-color: #121212;
+    background: linear-gradient(180deg, #383838, #1e1e1e);
     font-family: 'Lucida Sans', sans-serif;
     margin: 0;
     overflow-x: hidden;
@@ -22,7 +22,7 @@ html, body {
     align-items: center;
     justify-content: space-between;
     background: #A9A9A9;
-    padding: 0px 20px;
+    padding: 0px 40px;
     width: 100%;
     z-index: 1000;
 }
@@ -240,7 +240,7 @@ html, body {
     align-items: center;
     width: 100%;
     height: 100%;
-    background: linear-gradient(135deg, #778DA9, #415A77);
+    background: linear-gradient(180deg, #383838, #1e1e1e);
     padding: 20px;
     box-sizing: border-box;
 }
@@ -337,7 +337,6 @@ html, body {
 /* footer -- see how to make one */
 footer {
     display: flex;
-    background-color: #121212;
     padding: 10px 0px;
 }
 
