--- a/songeek-project/templates/songeek/add_song_to_playlist.html
+++ b/songeek-project/templates/songeek/add_song_to_playlist.html
@@ -5,6 +5,8 @@
     Add a Song to Playlist
 {% endblock %}
 
+{% block body_class %}navbar nav-search base-page base-box{% endblock %}
+
 {% block body_block %}
 <div class="base-page">
     <div class="base-box">
