--- a/songeek-project/templates/songeek/index.html
+++ b/songeek-project/templates/songeek/index.html
@@ -9,39 +9,8 @@
 
 {% block body_block %}
 
-<!-- navigation bar -->
-{% comment %} <header class="navbar">
-    <div class="nav-left">
-        <a href="{% url 'songeek:index' %}">
-            <!--<div class="nav-home">
-                <img src="{% static 'website_images/headphones.png' %}" alt="Songeek Logo" class="logo">
-                </a>
-            </div>-->
-        </div>
-
-    <div class="nav-center">
-        <form action="{% url 'songeek:search_results' %}" method="GET">
-            <input type="text" name="q" placeholder="Search albums or songs..." class="search-bar">
-        </form>
-    </div>
-
-    <div class="nav-right">
-        {% if user.is_authenticated %}
-        <div class="profile-icon">
-            <a href="{% url 'songeek:profile' %}">
-                <img src="{{ user.userprofile.picture.url }}" alt="Profile" class="profile-icon">
-            </a>
-        </div>
-        {% else %}
-            <a href="{% url 'songeek:login' %}" class="nav-button">Login</a>
-            <a href="{% url 'songeek:register' %}" class="nav-button">Sign Up</a>
-        {% endif %}
-    </div>
-</header> {% endcomment %}
-
-
 <div class="base-box">
-        <!-- top 5 daily songs -->
+        {% comment %} <!-- top 5 daily songs -->
         <div class="top-songs">
             <h2>Top 5 Daily Songs</h2>
             <ul>
@@ -56,7 +25,7 @@
                 </li>
                 {% endfor %}
             </ul>
-        </div>
+        </div> {% endcomment %}
 
 
         <!-- image placeholder -->
@@ -74,7 +43,9 @@
                 {% for playlist in user_playlists %}
                 <div class="card">
                     {% if playlist.cover %}
+                    <a href="{% url 'songeek:show_playlist' playlist.slug %}">
                         <img src="{{ playlist.cover.url }}" alt="{{ playlist.name }}" width="200">
+                    </a>
                     {% else %}
                         <p>No cover image</p>
                     {% endif %}
@@ -91,8 +62,10 @@
                 <div class="image-cards">
                     {% for album in albums %}
                     <div class="card">
+                        <a href="{% url 'songeek:show_album' album.slug %}">
                         <img src="{{ album.cover.url }}" alt="{{ album.name }}">
                         <p>{{ album.name }} - {{ album.artist }}</p>
+                        </a>
                     </div>
                     {% endfor %}
                 </div>
@@ -102,10 +75,12 @@
             <div class="section">
                 <h3>Recommendations for today</h3>
                 <div class="image-cards">
-                    {% for album in recommended_albums %}
+                    {% for song in songs %}
                     <div class="card">
-                        <img src="{{ album.cover.url }}" alt="{{ album.name }}">
-                        <p>{{ album.name }} - {{ album.artist }}</p>
+                        <a href="{% url 'songeek:show_song' song.id %}">
+                        <img src="{{ song.album.cover.url }}" alt="{{ song.title }}">
+                        <p>{{ song.title }} - {{ song.album.artist }}</p>
+                        </a>
                     </div>
                     {% endfor %}
                 </div>
