--- a/songeek-project/static/css/styles.css
+++ b/songeek-project/static/css/styles.css
@@ -1,5 +1,9 @@
 /* general CSS */
 
+* {
+    box-sizing: border-box;
+}
+
 html, body {
     height: 100%;
     display: block;
@@ -15,7 +19,7 @@ html, body {
 /* navbar */
 .navbar {
     position: sticky;
-    top: 0;
+    top: 20px;
     left: 0;
     height: 60px;
     display: flex;
@@ -32,7 +36,7 @@ html, body {
     gap: 10px;
 }
 
-.nav-home logo {
+.nav-home .logo {
     width: 30px;
     height: 30px;
     filter: invert(1);
@@ -93,6 +97,7 @@ html, body {
 .nav-search {
     flex-grow: 1;
     display: flex;
+    padding: 20px;
     align-items: center;
 }
 
@@ -208,6 +213,15 @@ html, body {
     text-align: center;
 }
 
+.song-sections {
+    width: 100%;
+    display: flex;
+    flex-direction: column; /* Ensures elements stack properly */
+    align-items: center; /* Centers its content horizontally */
+    justify-content: center; /* Optional: centers vertically if needed */
+    margin: 0 auto; /* Ensures it's centered within its parent */
+}
+
 .image-cards {
     display: flex;
     gap: 15px;
@@ -243,6 +257,7 @@ html, body {
     background: linear-gradient(180deg, #383838, #1e1e1e);
     padding: 20px;
     box-sizing: border-box;
+    margin: auto;
 }
 
 .base-box {
@@ -258,7 +273,8 @@ html, body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 80px auto
+
+    margin: 0 auto;
 }
 
 .base-box form {
@@ -400,4 +416,26 @@ footer {
 
 a:visited {
     color: #CCCCFF; /* Light purple for better visibility on black */
+}
+
+.image-cards::-webkit-scrollbar {
+    width: 8px;
+}
+.image-cards::-webkit-scrollbar-thumb {
+    background: #444;
+    border-radius: 4px;
+}
+
+.file-upload-wrapper input[type="file"] {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    cursor: pointer;
+}
+
+.file-upload-wrapper, .nav-auth, .footer-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
