--- a/songeek-project/templates/songeek/index.html
+++ b/songeek-project/templates/songeek/index.html
@@ -5,7 +5,7 @@
     Homepage
 {% endblock %}
 
-{% block body_class %}navbar nav-search base-page base-box index-page{% endblock %}
+{% block body_class %} nav-search index-page {% endblock %}
 
 {% block body_block %}
 
